# raptor-call-of-the-shadows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/: RESOURCES.TXT
resources/ready/: AIRBOOM_1.IMG  AIRBOOM_10.IMG  AIRBOOM_11.IMG  AIRBOOM_12.IMG  AIRBOOM_13.IMG  AIRBOOM_14.IMG  AIRBOOM_15.IMG  AIRBOOM_16.IMG  AIRBOOM_2.IMG  AIRBOOM_3.IMG  AIRBOOM_4.IMG  AIRBOOM_5.IMG  AIRBOOM_6.IMG  AIRBOOM_7.IMG  AIRBOOM_8.IMG  AIRBOOM_9.IMG  BEHAVIOUR_1.BEH  BEHAVIOUR_2.BEH  BEHAVIOUR_3.BEH  BG.IMG  BHV_AAMI.BEH  BHV_AGMI.BEH  BHV_ATRACK.BEH  BHV_BDING.BEH  BHV_BOSS_1.BEH  BHV_DISHOTL.BEH  BHV_DISHOTR.BEH  BHV_EN004_1.BEH  BHV_EN004_2.BEH  BHV_EN005_1.BEH  BHV_EN005_2.BEH  BHV_EN005_3.BEH  BHV_EN005_4.BEH  BHV_EN005_5.BEH  BHV_EN005_6.BEH  BHV_EN006_1.BEH  BHV_EN006_2.BEH  BHV_EN006_3.BEH  BHV_EN006_4.BEH  BHV_EN006_5.BEH  (+323 more)
resources/source/: BEHAVIOUR_1.txt  BEHAVIOUR_2.txt  BHV_AAMI.TXT  (+98 more)
src/: CMakeLists.txt  actor.c  actor.h  behaviour.c  behaviour.h  bullet.c  bullet.h  computer.c  computer.h  data.c  data.h  definitions.h  dialog.c  dialog.h  explosion.c  explosion.h  game.c  game.h  hangar.c  hangar.h  hud.c  hud.h  item.c  item.h  loader.c  loader.h  main.c  map.c  map.h  menu.c  menu.h  newpilot.c  newpilot.h  pilot.c  pilot.h  scene.c  scene.h  ship.c  ship.h  store.c  (+3 more)
src/cli/: CMakeLists.txt  main.c
src/cli/behaviour/: behaviourtool.c  behaviourtool.h
src/cli/image/: imagetool.c  imagetool.h
src/cli/item/: itemtool.c  itemtool.h
src/cli/map/: maptool.c  maptool.h
src/cli/ship/: shiptool.c  shiptool.h
src/cli/weapon/: weapontool.c  weapontool.h
(+19 files in other folders)
